WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
101160
Missing ASCIILiteral in a place of accessibility
https://bugs.webkit.org/show_bug.cgi?id=101160
Summary
Missing ASCIILiteral in a place of accessibility
Gyuyoung Kim
Reported
2012-11-04 00:55:24 PDT
ASCIILiteral usage is being missed in a spot of accessibliity
Attachments
Patch
(1.64 KB, patch)
2012-11-04 00:59 PDT
,
Gyuyoung Kim
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Gyuyoung Kim
Comment 1
2012-11-04 00:59:59 PDT
Created
attachment 172238
[details]
Patch
WebKit Review Bot
Comment 2
2012-11-04 09:28:11 PST
Comment on
attachment 172238
[details]
Patch Clearing flags on attachment: 172238 Committed
r133424
: <
http://trac.webkit.org/changeset/133424
>
WebKit Review Bot
Comment 3
2012-11-04 09:28:15 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug