Missing ASCIILiteral in a place of accessibility https://bugs.webkit.org/show_bug.cgi?id=101160

Reviewed by Darin Adler.

ASCIILiteral usage is being missed in a spot of accessibliity.

* accessibility/AccessibilityMediaControls.cpp:
(WebCore::AccessibilityMediaTimeDisplay::accessibilityDescription):


Canonical link: https://commits.webkit.org/119259@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@133424 268f45cc-cd09-0410-ab3c-d52691b4dbfc